welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:34: error: not found: value c
c=Color.red
^FlowerPot:35: error: not found: value c
plant(c)
      ^