welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def peindre() {
	baisseBrosse()
	leveBrosse()
}

def plant(c:Color) {
	setCouleurBrosse(c)
	baisseBrosse()
	avance()
	avance()
	recule()
	gauche()
	avance()
	recule()
	recule()
	avance()
	setCouleurBrosse(Color.yellow)
	leveBrosse()
	avance()
	avance()
	avance()
	
	
}



def growFlowers() {
	
	 
}

c=Color.red
plant(c)
